--- a/recipes/protein-pancakes.html
+++ b/recipes/protein-pancakes.html
@@ -2,10 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protein Pancakes/title>
+    <title>Protein Pancakes</title>
 </head>
 <body>
     <h1>Protein Pancakes</h1>
+    <img src="https://images.immediate.co.uk/production/volatile/sites/30/2021/02/Protein-pancakes-b64bd40.jpg?quality=90&webp=true&resize=300,272" alt="Picture of protein pancakes">
     
 </body>
 </html>
