Added the main content to the page Descrition, Ingredients, Steps ect.

--- a/recipes/protein-pancakes.html
+++ b/recipes/protein-pancakes.html
@@ -7,6 +7,33 @@
 <body>
     <h1>Protein Pancakes</h1>
     <img src="https://images.immediate.co.uk/production/volatile/sites/30/2021/02/Protein-pancakes-b64bd40.jpg?quality=90&webp=true&resize=300,272" alt="Picture of protein pancakes">
-    
+ <br>
+
+<h1>Description</h1>
+
+<p>Up your protein with these pancakes made with eggs, oats, milk and protein powder. A great breakfast after a workout, enjoy with nut butter or fruit.</p>
+
+<h1>Ingredients</h1>
+
+<ul>
+    <li>1 Banana</li>
+    <li>75g oats</li>
+    <li>3 large eggs</li>
+    <li>2 tbsp milk</li>
+    <li>1 tbsp baking soda</li>
+    <li>pinch of cinnamon</li>
+    <li>2 tbs of protein powder</li>
+    <li>cocnut oil</li>
+    <li>maple syrup and berries</li>
+</ul>
+
+<h1>Steps</h1>
+
+<ol>
+    <li>Whizz the banana, oats, eggs, milk, baking powder, cinnamon and protein powder in a blender for 1-2 mins until smooth. Check the oats have broken down, if not, blend for another minute.</li>
+<br>
+    <li>Heat a drizzle of oil in a pan. Pour or ladle in 2-3 rounds of batter, leaving a little space between each to spread. Cook for 1-2 minutes, until bubbles start to appear on the surface and the underside is golden. Flip over and cook for another minute until cooked through. Transfer to a warmed oven and repeat with the remaining batter. Serve in stacks with nut butter, maple syrup and fruit.</li>
+</ol>
+
 </body>
 </html>
